--- a/DementeNatural-Movil/app/src/main/res/drawable/button_outline.xml
+++ b/DementeNatural-Movil/app/src/main/res/drawable/button_outline.xml
@@ -3,6 +3,6 @@
     <solid android:color="#00000000" />
     <stroke
         android:width="1dp"
-        android:color="#614325" />
+        android:color="@color/dark_brown" />
     <corners android:radius="6dp" />
 </shape>
