--- a/DementeNatural-Movil/app/src/main/res/layout/activity_editar_producto.xml
+++ b/DementeNatural-Movil/app/src/main/res/layout/activity_editar_producto.xml
@@ -17,9 +17,9 @@
         android:layout_marginTop="16dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:src="@drawable/ic_back"
-        android:tint="@color/dark_brown"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/dark_brown" />
 
     <!-- Title -->
     <TextView
@@ -217,13 +217,5 @@
     </LinearLayout>
 
     <!-- Bottom Navigation Indicator -->
-    <View
-        android:layout_width="50dp"
-        android:layout_height="4dp"
-        android:layout_marginBottom="8dp"
-        android:background="@color/dark_brown"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
